# phlex

./: .actrc  .clang-tidy  .flake8  .gersemirc  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .prettierrc.yaml  .yamllint  AGENTS.md  CATCH2_CONVERSION_EVALUATION.md  CLANG_TIDY_CONFIGURATION.md  CMakeLists.txt  CMakePresets.json  COMMIT_MESSAGE.md  COVERAGE_FIX_EXPLANATION.md  DEVELOPING.md  FILES_CHANGED.md  GETTING_STARTED.md  GIT_COMMIT_MESSAGE.txt  INSTALLATION.md  MARKDOWN_FIX_ANALYSIS.md  README-dev.md  README.md  TEST_CONVERSION_SUMMARY.md  TEST_FIXES.md  codecov.yml  phlex.code-workspace  pyproject.toml
form/form/: CMakeLists.txt  config.cpp  config.hpp  form.cpp  form.hpp  form_reader.cpp  form_reader.hpp  form_source_type_registry.cpp  form_source_type_registry.hpp  form_writer.cpp  form_writer.hpp  parse_config.cpp  parse_config.hpp  phlex_toy_core.cpp  phlex_toy_core.hpp  product_with_name.hpp  technology.hpp
form/root_storage/: #root_tfile.cpp#  #root_tfile.hpp#  CMakeLists.txt  demangle_name.cpp  demangle_name.hpp  root_rfield_container.cpp  root_rfield_container.hpp  root_rfield_read_container.cpp  root_rfield_read_container.hpp  root_rfield_write_container.cpp  root_rfield_write_container.hpp  root_rntuple_container.cpp  root_rntuple_container.hpp  root_rntuple_read_container.cpp  root_rntuple_read_container.hpp  root_rntuple_write_container.cpp  root_rntuple_write_container.hpp  root_storage.cpp  root_storage.hpp  root_tbranch_container.cpp  root_tbranch_container.hpp  root_tbranch_read_container.cpp  root_tbranch_read_container.hpp  root_tbranch_write_container.cpp  root_tbranch_write_container.hpp  root_tfile.cpp  root_tfile.hpp  root_ttree_container.cpp  root_ttree_container.hpp  root_ttree_read_container.cpp  root_ttree_read_container.hpp  root_ttree_write_container.cpp  root_ttree_write_container.hpp
phlex/: CMakeLists.txt  concurrency.hpp  configuration.cpp  configuration.hpp  driver.hpp  module.hpp  source.hpp
phlex/app/: CMakeLists.txt  load_module.cpp  load_module.hpp  phlex.cpp  run.cpp  run.hpp  version.cpp.in  version.hpp
phlex/core/: CMakeLists.txt  bound_function.hpp  cached_product_stores.hpp  concepts.hpp  concurrency.cpp  consumer.cpp  consumer.hpp  declared_fold.cpp  declared_fold.hpp  declared_observer.cpp  declared_observer.hpp  declared_output.cpp  declared_output.hpp  declared_predicate.cpp  declared_predicate.hpp  declared_provider.cpp  declared_provider.hpp  declared_transform.cpp  declared_transform.hpp  declared_unfold.cpp  declared_unfold.hpp  double_bound_function.hpp  edge_creation_policy.cpp  edge_creation_policy.hpp  edge_maker.cpp  edge_maker.hpp  end_of_message.cpp  end_of_message.hpp  filter.cpp  filter.hpp  fold_join_node.hpp  framework_graph.cpp  framework_graph.hpp  fwd.hpp  glue.cpp  glue.hpp  graph_proxy.hpp  index_router.cpp  index_router.hpp  input_arguments.cpp  (+36 more)
phlex/detail/: plugin_macros.hpp
phlex/graph/: CMakeLists.txt  serial_node.hpp  serializer_node.hpp
phlex/metaprogramming/: CMakeLists.txt  delegate.hpp  type_deduction.hpp
phlex/model/: CMakeLists.txt  algorithm_name.cpp  algorithm_name.hpp  data_cell_counter.cpp  data_cell_counter.hpp  data_cell_counts.cpp  data_cell_counts.hpp  data_cell_id.cpp  data_cell_id.hpp  data_cell_index.cpp  data_cell_index.hpp  data_cell_tracker.cpp  data_cell_tracker.hpp  data_layer_hierarchy.cpp  data_layer_hierarchy.hpp  fixed_hierarchy.cpp  fixed_hierarchy.hpp  flush_gate.cpp  flush_gate.hpp  flush_messages.hpp  full_product_spec.hpp  fwd.hpp  handle.hpp  identifier.cpp  identifier.hpp  index_generator.hpp  layer_path.cpp  layer_path.hpp  level_counter.cpp  level_counter.hpp  level_hierarchy.cpp  level_hierarchy.hpp  level_id.cpp  level_id.hpp  product_matcher.cpp  product_matcher.hpp  product_specification.cpp  product_specification.hpp  product_store.cpp  product_store.hpp  (+6 more)
phlex/utilities/: CMakeLists.txt  async_driver.hpp  bulleted_list.hpp  hashing.cpp  hashing.hpp  max_allowed_parallelism.hpp  resource_usage.cpp  resource_usage.hpp  resumable_driver.hpp  simple_ptr_map.hpp  sized_tuple.hpp  sleep_for.hpp  string_literal.hpp  stripped_name.cpp  stripped_name.hpp  thread_counter.hpp
plugins/: CMakeLists.txt  generate_layers.cpp  layer_generator.cpp  layer_generator.hpp
plugins/python/: CMakeLists.txt  README.md  configwrap.cpp  modulewrap.cpp  wrap.hpp
test/: CMakeLists.txt  accumulator_test.cpp  adjust_config.cpp  allowed_families.cpp  anonymous_products.cpp  cached_execution.cpp  cached_execution_source.hpp  cached_product_stores.cpp  class_registration.cpp  concepts.cpp  configuration.cpp  core_misc_test.cpp  data_cell_counting.cpp  data_cell_id.cpp  data_cell_index.cpp  data_cell_tracker_test.cpp  data_layer_hierarchy_test.cpp  different_hierarchies.cpp  filter.cpp  filter_impl.cpp  fixed_hierarchy_test.cpp  flush_gate_test.cpp  fold.cpp  fold_duplicate_layer_name_test.cpp  form_basics_test.cpp  framework_graph.cpp  function_registration.cpp  generate_layers.cpp  hierarchical_nodes.cpp  identifier.cpp  index_generator.cpp  layer_generator.cpp  layer_generator.hpp  layer_path.cpp  level_counting.cpp  level_id.cpp  multiple_function_registration.cpp  output_products.cpp  product_handle.cpp  product_matcher.cpp  (+19 more)
test/benchmarks/: CMakeLists.txt  accept_even_ids.cpp  accept_even_numbers.cpp  accept_fibonacci_numbers.cpp  benchmark-01.jsonnet  benchmark-02.jsonnet  benchmark-03.jsonnet  benchmark-04.jsonnet  benchmark-05.jsonnet  benchmark-06.jsonnet  benchmark-07.jsonnet  benchmark-08.jsonnet  benchmark-09.jsonnet  benchmarks_provider.cpp  benchmarks_source.cpp  fibonacci_numbers.cpp  fibonacci_numbers.hpp  last_index.cpp  plus_101.cpp  plus_one.cpp  read_id.cpp  read_index.cpp  verify_difference.cpp  verify_even_fibonacci_numbers.cpp
test/demo-giantdata/: CMakeLists.txt  log_record.hpp  summed_clamped_waveforms.hpp  unfold_transform_fold.cpp  user_algorithms.cpp  user_algorithms.hpp  waveform_generator.cpp  waveform_generator.hpp  waveform_generator_input.cpp  waveform_generator_input.hpp  waveforms.cpp  waveforms.hpp
test/form/: config.cpp  (+24 more)
(+491 files in other folders)
