add_definitions("-UNDEBUG")

find_package(Catch2 REQUIRED)
include(CetTest)

cet_test(
  concepts
  SOURCE
  concepts.cpp
  LIBRARIES
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  string_literal
  SOURCE
  string_literal.cpp
  LIBRARIES
  phlex::utilities
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  type_deduction
  SOURCE
  type_deduction.cpp
  LIBRARIES
  phlex::metaprogramming
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  type_id
  SOURCE
  type_id.cpp
  LIBRARIES
  phlex::model
  fmt::fmt
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  yielding_driver
  SOURCE
  yielding_driver.cpp
  LIBRARIES
  phlex::core
  TBB::tbb
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )

cet_test(
  allowed_families
  USE_CATCH2_MAIN
  SOURCE
  allowed_families.cpp
  LIBRARIES
  phlex::core
  Boost::json
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  vector_of_abstract_types
  USE_CATCH2_MAIN
  SOURCE
  vector_of_abstract_types.cpp
  LIBRARIES
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  cached_execution
  USE_CATCH2_MAIN
  SOURCE
  cached_execution.cpp
  LIBRARIES
  phlex::core
  Boost::json
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  cached_product_stores
  USE_CATCH2_MAIN
  SOURCE
  cached_product_stores.cpp
  LIBRARIES
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  class_registration
  USE_CATCH2_MAIN
  SOURCE
  class_registration.cpp
  LIBRARIES
  phlex::core
  Boost::json
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  different_hierarchies
  USE_CATCH2_MAIN
  SOURCE
  different_hierarchies.cpp
  LIBRARIES
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  filter_impl
  USE_CATCH2_MAIN
  SOURCE
  filter_impl.cpp
  LIBRARIES
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  filter
  USE_CATCH2_MAIN
  SOURCE
  filter.cpp
  LIBRARIES
  phlex::core
  Boost::json
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  framework_graph
  USE_CATCH2_MAIN
  SOURCE
  framework_graph.cpp
  LIBRARIES
  phlex::core
  Boost::json
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  function_registration
  USE_CATCH2_MAIN
  SOURCE
  function_registration.cpp
  LIBRARIES
  phlex::core
  Boost::json
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  hierarchical_nodes
  USE_CATCH2_MAIN
  SOURCE
  hierarchical_nodes.cpp
  LIBRARIES
  Boost::json
  TBB::tbb
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  multiple_function_registration
  USE_CATCH2_MAIN
  SOURCE
  multiple_function_registration.cpp
  LIBRARIES
  Boost::json
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  data_cell_counting
  USE_CATCH2_MAIN
  SOURCE
  data_cell_counting.cpp
  LIBRARIES
  phlex::model
  phlex::utilities
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  data_cell_index
  USE_CATCH2_MAIN
  SOURCE
  data_cell_index.cpp
  LIBRARIES
  phlex::model
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  product_handle
  USE_CATCH2_MAIN
  SOURCE
  product_handle.cpp
  LIBRARIES
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  product_matcher
  USE_CATCH2_MAIN
  SOURCE
  product_matcher.cpp
  LIBRARIES
  phlex::model
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  product_store
  USE_CATCH2_MAIN
  SOURCE
  product_store.cpp
  LIBRARIES
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  fold
  USE_CATCH2_MAIN
  SOURCE
  fold.cpp
  LIBRARIES
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  replicated
  USE_CATCH2_MAIN
  SOURCE
  replicated.cpp
  LIBRARIES
  TBB::tbb
  phlex::utilities
  spdlog::spdlog
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  serializer
  USE_CATCH2_MAIN
  SOURCE
  serializer.cpp
  LIBRARIES
  phlex::core
  TBB::tbb
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  product_query
  USE_CATCH2_MAIN
  SOURCE
  product_query.cpp
  LIBRARIES
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  type_distinction
  USE_CATCH2_MAIN
  SOURCE
  type_distinction.cpp
  LIBRARIES
  spdlog::spdlog
  phlex::core
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )
cet_test(
  unfold
  USE_CATCH2_MAIN
  SOURCE
  unfold.cpp
  LIBRARIES
  Boost::json
  phlex::core
  TBB::tbb
  TEST_PROPERTIES
  ENVIRONMENT
  SPDLOG_LEVEL=debug
  )

add_subdirectory(benchmarks)

add_subdirectory(max-parallelism)
add_subdirectory(memory-checks)
add_subdirectory(plugins)
add_subdirectory(utilities)
add_subdirectory(mock-workflow)
add_subdirectory(demo-giantdata)
add_subdirectory(python)

if(PHLEX_USE_FORM)
  add_subdirectory(form)
endif()
